# MetallProfile_app

./: README.md  main.py  pyproject.toml
src/: ui.py
src/classes/: FillWindow.py  MainWindowUI.py  calculate_formulas.py
