[tool.poetry]
name = "Zinochka-app"
version = "0.1.0"
description = ""
authors = ["DaniilMashkov <dankeeeez@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pyqt6 = "^6.4.0"
pyqt-tools = "^1.0.0"
pyqt5 = "^5.15.7"

[tool.poetry.scripts]
calculate = "main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
